--- a/app/components/Home.scss
+++ b/app/components/Home.scss
@@ -3,12 +3,13 @@
   top: 30%;
   left: 10px;
   text-align: center;
-}
 
-.container h2 {
-  font-size: 5rem;
-}
+	h2 {
+	  font-size: 5rem;
+	}
 
-.container a {
-  font-size: 1.4rem;
+	a {
+	  font-size: 1.4rem;
+	}
+
 }
